--- a/NB01 - ASCOR Dataset Analysis.ipynb
+++ b/NB01 - ASCOR Dataset Analysis.ipynb
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
     "country = 'United Kingdom'\n",
     "\n",
     "# Filter the data for the 'National 1.5C benchmark' rows\n",
-    "national_benchmarks = benchmarks[benchmarks['Benchmark type'] == 'National 1.5C benchmark']\n",
+    "national_benchmarks = df_benchmarks[df_benchmarks['Benchmark type'] == 'National 1.5C benchmark']\n",
     "\n",
     "# Filter the data for the specific country\n",
     "country_benchmarks = national_benchmarks[national_benchmarks['Country'] == country]\n",
