--- a/NB01 - ASCOR Dataset Analysis.ipynb
+++ b/NB01 - ASCOR Dataset Analysis.ipynb
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "            <div id=\"7Cd4OJ\"></div>\n",
+       "            <div id=\"r2FqE4\"></div>\n",
        "            <script type=\"text/javascript\" data-lets-plot-script=\"library\">\n",
        "                if(!window.letsPlotCallQueue) {\n",
        "                    window.letsPlotCallQueue = [];\n",
@@ -93,9 +93,9 @@
        "                        var div = document.createElement(\"div\");\n",
        "                        div.style.color = 'darkred';\n",
        "                        div.textContent = 'Error loading Lets-Plot JS';\n",
-       "                        document.getElementById(\"7Cd4OJ\").appendChild(div);\n",
+       "                        document.getElementById(\"r2FqE4\").appendChild(div);\n",
        "                    };\n",
-       "                    var e = document.getElementById(\"7Cd4OJ\");\n",
+       "                    var e = document.getElementById(\"r2FqE4\");\n",
        "                    e.appendChild(script);\n",
        "                })()\n",
        "            </script>\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "'./data/TPI ASCOR data - 13012025'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,16 +143,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./data/TPI ASCOR data - 13012025'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "DATA_PATH = './data/TPI ASCOR data - 13012025'"
+    "DATA_PATH = './data/TPI ASCOR data - 13012025'\n",
+    "DATA_PATH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +647,7 @@
        "19  1201.89  1140.11  1078.33  1016.55  954.77  892.99  831.20  769.42  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +827,7 @@
        "National 1.5C benchmark       45    45    45    45  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +875,8 @@
       "137     True\n",
       "138    False\n",
       "139     True\n",
-      "Name: Benchmark type, Length: 140, dtype: bool\n"
+      "Name: Benchmark type, Length: 140, dtype: bool\n",
+      "['2024', '2025', '2026', '2027', '2028', '2029', '2030']\n"
      ]
     }
    ],
@@ -875,14 +888,37 @@
     "national_benchmark_df.set_index(['Country'], inplace=True)\n",
     "\n",
     "# With this, we select only the columns that contain the years (the country will be the index)\n",
-    "years = [str(year) for year in range(2024, 2031)]"
+    "years = [str(year) for year in range(2024, 2031)]\n",
+    "print(years)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       2024   2025   2026   2027   2028   2029   2030\n",
+      "Country                                                              \n",
+      "Angola                False  False  False  False  False  False  False\n",
+      "Argentina             False  False  False  False  False  False  False\n",
+      "Australia             False  False  False  False  False  False  False\n",
+      "Austria                True   True   True   True   True   True   True\n",
+      "Azerbaijan             True   True   True   True   True   True   True\n",
+      "...                     ...    ...    ...    ...    ...    ...    ...\n",
+      "Türkiye               False  False  False  False  False  False  False\n",
+      "United Arab Emirates  False  False  False  False  False  False  False\n",
+      "United Kingdom        False  False  False  False  False  False  False\n",
+      "United States         False  False  False  False  False  False  False\n",
+      "Uruguay                True   True   True   True   True   True   True\n",
+      "\n",
+      "[70 rows x 7 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if there are missing values in any of the years\n",
     "# Discuss: is there any advantage to using our index like we introduced before (Country)? Answer: yes, the rest\n",
@@ -891,21 +927,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country\n",
+      "Angola                  0\n",
+      "Argentina               0\n",
+      "Australia               0\n",
+      "Austria                 7\n",
+      "Azerbaijan              7\n",
+      "                       ..\n",
+      "Türkiye                 0\n",
+      "United Arab Emirates    0\n",
+      "United Kingdom          0\n",
+      "United States           0\n",
+      "Uruguay                 7\n",
+      "Length: 70, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# We need to improve the line above such that we end up with a sum of missing values per row.\n",
     "# Explain: what axis=1 means and why the output looks different (it's a Series now, no longer a DataFrame).\n",
     "# Emphasise that Series also have an index, which is the same as the index of the DataFrame.\n",
-    "print(national_benchmark_df[years].isnull().sum(axis=1))\n"
+    "print(national_benchmark_df[years].isnull().sum(axis=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country\n",
+      "Angola                  False\n",
+      "Argentina               False\n",
+      "Australia               False\n",
+      "Austria                  True\n",
+      "Azerbaijan               True\n",
+      "                        ...  \n",
+      "Türkiye                 False\n",
+      "United Arab Emirates    False\n",
+      "United Kingdom          False\n",
+      "United States           False\n",
+      "Uruguay                  True\n",
+      "Length: 70, dtype: bool\n",
+      "Index(['Austria', 'Azerbaijan', 'Bahrain', 'Barbados', 'Belgium', 'Cyprus',\n",
+      "       'Denmark', 'Dominican Republic', 'Estonia', 'Finland', 'Hong Kong',\n",
+      "       'Hungary', 'Ireland', 'Latvia', 'Lithuania', 'Luxembourg', 'Malta',\n",
+      "       'Netherlands', 'Oman', 'Panama', 'Portugal', 'Slovak Republic',\n",
+      "       'Slovenia', 'Sweden', 'Uruguay'],\n",
+      "      dtype='object', name='Country')\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert the above to a boolean series\n",
     "missing_value_rows = national_benchmark_df[years].isnull().sum(axis=1) > 0\n",
@@ -926,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1336,7 @@
        "Uruguay              NaN   NaN   NaN   NaN   NaN   NaN   NaN"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1364,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1585,7 @@
        "7   219.9  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,13 +1612,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "   <div id=\"xUUOu7\"></div>\n",
+       "\n",
+       "            <div id=\"tdgK1g\"></div>\n",
+       "            <script type=\"text/javascript\" data-lets-plot-script=\"library\">\n",
+       "                if(!window.letsPlotCallQueue) {\n",
+       "                    window.letsPlotCallQueue = [];\n",
+       "                }; \n",
+       "                window.letsPlotCall = function(f) {\n",
+       "                    window.letsPlotCallQueue.push(f);\n",
+       "                };\n",
+       "                (function() {\n",
+       "                    var script = document.createElement(\"script\");\n",
+       "                    script.type = \"text/javascript\";\n",
+       "                    script.src = \"https://cdn.jsdelivr.net/gh/JetBrains/lets-plot@v4.4.1/js-package/distr/lets-plot.min.js\";\n",
+       "                    script.onload = function() {\n",
+       "                        window.letsPlotCall = function(f) {f();};\n",
+       "                        window.letsPlotCallQueue.forEach(function(f) {f();});\n",
+       "                        window.letsPlotCallQueue = [];\n",
+       "                        \n",
+       "                    };\n",
+       "                    script.onerror = function(event) {\n",
+       "                        window.letsPlotCall = function(f) {};    // noop\n",
+       "                        window.letsPlotCallQueue = [];\n",
+       "                        var div = document.createElement(\"div\");\n",
+       "                        div.style.color = 'darkred';\n",
+       "                        div.textContent = 'Error loading Lets-Plot JS';\n",
+       "                        document.getElementById(\"tdgK1g\").appendChild(div);\n",
+       "                    };\n",
+       "                    var e = document.getElementById(\"tdgK1g\");\n",
+       "                    e.appendChild(script);\n",
+       "                })()\n",
+       "            </script>\n",
+       "            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "   <div id=\"XtKBJA\"></div>\n",
        "   <script type=\"text/javascript\" data-lets-plot-script=\"plot\">\n",
        "       (function() {\n",
        "           var plotSpec={\n",
@@ -1594,7 +1716,7 @@
        "}],\n",
        "\"metainfo_list\":[]\n",
        "};\n",
-       "           var plotContainer = document.getElementById(\"xUUOu7\");\n",
+       "           var plotContainer = document.getElementById(\"XtKBJA\");\n",
        "           window.letsPlotCall(function() {{\n",
        "               LetsPlot.buildPlotFromProcessedSpecs(plotSpec, -1, -1, plotContainer);\n",
        "           }});\n",
@@ -1602,17 +1724,17 @@
        "   </script>"
       ],
       "text/plain": [
-       "<lets_plot.plot.core.PlotSpec at 0x7fe6b2847a90>"
+       "<lets_plot.plot.core.PlotSpec at 0x7fb0195318b0>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from lets_plot import * # Move this to the top of your notebook\n",
-    "\n",
+    "LetsPlot.setup_html()\n",
     "uk_plot = (\n",
     "    ggplot(melted, aes(x='Year', y='MtCO₂e')) +\n",
     "    geom_line() +\n",
